added modal to login with navbar, auth and http service added

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,11 +1,19 @@
 <div id="footer" class="row">
     <div class="col-lg-6 col-12 p-5">
-        <p class="text-center">Other websites to visits</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos adipisci nulla fugiat praesentium voluptas modi neque earum vitae ducimus?</p>
+        <ul>
+            <li>
+                <p class="text-center">Other websites to visits</p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut quos adipisci nulla fugiat praesentium voluptas modi neque earum vitae ducimus?
+            </li>
+        </ul>
     </div>
     <div class="col-lg-6 col-12 p-5">
-        <p class="text-center">Apply for a mastercard</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, enim!</p>
+        <ul>
+            <li>
+                <p class="text-center">Apply for a mastercard</p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, enim!
+            </li>
+        </ul>
     </div>
 <div id="footer" class="row">
     <div class="col-lg-3 col-12 p-5">
@@ -41,13 +49,13 @@
         </ul>       
     </div>
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 p-5">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga delectus a magni nam deserunt. Nemo voluptatibus id excepturi distinctio unde.
         </div>
     </div>
     <div class="w-100"><hr></div>
     <div class="row footer-contact">
-        <div class="col-12">
+        <div class="col-12 p-5">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo autem corporis deserunt eaque delectus enim aut nesciunt rem repellat error.
         </div>
     </div>
