--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,13 @@
+<app-navbar></app-navbar>
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
       <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <app-navbar></app-navbar>
-            <app-feature></app-feature>
-            <app-trending></app-trending>
-            <app-findstore></app-findstore>
-            <app-employy-favorites></app-employy-favorites>
-            <app-footer></app-footer>
-          </div>
-        </div>
+        <app-feature></app-feature>
+        <app-trending></app-trending>
+        <app-findstore></app-findstore>
+        <app-employee-choice></app-employee-choice>
+        <app-footer></app-footer>
       </div>
     </div>
   </div>
