--- a/src/app/components/feature/feature.component.css
+++ b/src/app/components/feature/feature.component.css
@@ -1,1 +1,9 @@
-/* No CSS *//*# sourceMappingURL=feature.component.css.map */
+.peopleCarouselImg {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+#feature {
+  position: relative;
+}
+/*# sourceMappingURL=feature.component.css.map */
