--- a/src/app/components/feature/feature.component.html
+++ b/src/app/components/feature/feature.component.html
@@ -1,12 +1,24 @@
-<div class="row p-2">
-    <div class="col-12">
-        <div class="row">
+<div id="feature" class="row p-2">
+    <!-- <div class="col-12"> -->
+        <!-- <div class="row"> -->
             <div class="col-lg-6 col-12 text-center p-5">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sint ipsam nam, repellendus quis fugit officia repellat adipisci, velit pariatur dolores vel inventore laudantium provident et autem voluptas, a optio?
+                <div id="carouselSlides" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block w-100 peopleCarouselImg" src="./../../../assets/img/caffeine-cellphone.jpg" alt="First slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100 peopleCarouselImg" src="./../../../assets/img/side.jpg" alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block w-100 peopleCarouselImg" src="./../../../assets/img/automobile.jpg" alt="Third slide">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col-lg-6 col-12 text-center p-5">
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ratione sint ipsam nam, repellendus quis fugit officia repellat adipisci, velit pariatur dolores vel inventore laudantium provident et autem voluptas, a optio?
             </div>
-        </div>
-    </div>
+        <!-- </div> -->
+    <!-- </div> -->
 </div>
