--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,4 +4,4 @@
     <app-findstore></app-findstore>
     <app-employee-choice></app-employee-choice>
     <app-footer></app-footer>
-</router-outlet>>
+</router-outlet>
