--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -47,8 +47,9 @@
         <div class="row">
             <ul class="navbar-nav">
                 <li class="nav-item">       
-                    <a class="nav-link navbar-item nav-item" data-toggle="modal" data-target="#elegantModalForm" href="#collapseLogReg" role="button" aria-expanded="false" aria-controls="collapseExample">SIGN IN<i class="fa fa-user ml-2"></i></a>
-                    <!-- <a class="nav-link navbar-item nav-item" data-toggle="collapse" href="#collapseLogReg" role="button" aria-expanded="false" aria-controls="collapseExample">SIGN IN<i class="fa fa-user ml-2"></i></a> -->
+                    <a class="nav-link navbar-item nav-item" data-toggle="modal" data-target="#modalForm" role="button" aria-expanded="false" aria-controls="collapseExample">SIGN IN<i class="fa fa-user ml-2"></i></a>
+                    <!-- <a class="nav-link navbar-item nav-item" data-toggle="modal" data-target="#elegantModalForm" href="#collapseLogReg" role="button" aria-expanded="false" aria-controls="collapseExample">LOG OUT<i class="fa fa-user ml-2"></i></a> -->
+                    <!-- <a *ngIf="currUser.token == token"  class="nav-link navbar-item nav-item" data-toggle="collapse" href="#collapseLogReg" role="button" aria-expanded="false" aria-controls="collapseExample">SIGN IN<i class="fa fa-user ml-2"></i></a> -->
                 </li>          
                 <li class="nav-item">
                     <a class="nav-link navbar-item nav-item" href="">STORES<i class="fas fa-map-marker-alt ml-2"></i></a>
@@ -62,7 +63,7 @@
 </nav>
 
 <!-- Modal -->
-<div class="modal fade" id="elegantModalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="modalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <!--Content-->
         <div class="modal-content">
@@ -76,19 +77,23 @@
             <!--Body-->
             <div class="modal-body mx-4">
                 <!--Form-->
-                <form (submit)="login(this.oldUser)">
+                <form (submit)="login(formData)" #formData="ngForm">
                     <div class="mb-4 form-group input-group">
                         <input type="email" class=" mt-3 form-control form-control-lg" 
                         [(ngModel)]="oldUser.email" 
                         name="oldUser.email" 
-                        placeholder="Your email">
+                        placeholder="Your email"
+                        #email="ngModel"
+                        >
                     </div>
 
                     <div class="mb-5 form-group input-group input-group-lg">
                         <input type="password" class="form-control form-control-lg" 
                         [(ngModel)]="oldUser.password"
                         name="oldUser.password"
-                        placeholder="Your password">
+                        placeholder="Your password"
+                        #password="ngModel"
+                        >
                     </div>
                     
                     <div class="text-centermb-3 form-group">
@@ -99,7 +104,7 @@
                         <p class="h3 text-center">OR</p>
                     </div>
                     
-                    <p class="font-small dark-grey-text text-right font-weight-bold d-flex justify-content-center mb-3 pt-2">Sign in with:</p>
+                    <p class="font-small dark-grey-text text-right font-weight-bold d-flex justify-content-center mb-3 pt-2" onclick="$('.modal').modal('hide')">Sign in with:</p>
                     <div class="row my-3 d-flex justify-content-center">
                         <!--Facebook-->
                         <button type="button" class="btn btn-white btn-facebook m-3 rounded-circle shadow"><i class="fab fa-facebook-f"></i></button>
