created welcome component as main page, created borders for footer, quick registration html

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,13 +1,10 @@
 #footer {
-    background-color:#d8d8d8;
+    background-color:#000;
 }
-hr {
-    border-color: black solid 1px;
-    margin: 18px 0;
-    width:100%
-  }
-.footer-contact::before {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    border: 1px solid red !important;
-  }
+
+.row {
+    border-bottom:solid 1px #666;
+    &:last-child {
+        border-bottom:none;
+    }
+}
