--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,7 +1,62 @@
 <div class="row">
-    <div class="col-12">
+    <div class="col-lg-7">
         <p>Email: {{email.errors | json }} | Is email valid? {{email.valid | json }}  {{email.required | json}}</p>
         <p>Password: {{password.errors | json }} Valid? {{password.valid | json }}</p>
+        <h1 class="font-weight-bold mb-4">Create a new Cartify online account</h1>
+        <p class="form-header">* Required Information</p>
+        <form (submit)='register(formData)' #formData='ngForm' class="needs-validation" novalidate>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-12">
+                        <label for="email">Email address*</label>
+                        <input type="email" class="form-control mb-3" [class.is-valid]="email.valid"
+                        required
+                        pattern='^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$'
+                        name="newUser.email" 
+                        [(ngModel)]="newUser.email"
+                        #email="ngModel"
+                        >
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <div class="col-12">
+                        <label for="password">Password *</label>
+                        <input type="password" class="form-control" [class.is-valid]="password.valid"
+                        required
+                        pattern='^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$'
+                        name="newUser.password"
+                        [(ngModel)]="newUser.password"
+                        #password="ngModel"
+                        >
+                        <small class="mb-3">Minimum of 8 characters containing one number and special character</small>
+                        <div class="valid-feedback">
+                            Perfect!
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="submit" class="btn btn-info mt-3" [disabled]='formData.invalid'>Create Account</button>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+
+<div *ngFor='let error of errors'>
+    <p><i class="fas fa-times"></i> {{error}}</p>
+</div>  
+
+<hr class="my-5">
+
+<!-- <div class="row">
+    <div class="col-12">
         <h2 class='text-center p-3'>Sign Up {{pattern}}</h2>
         <form (submit)='register()' #formData='ngForm' class="needs-validation" novalidate>
             <div class="form-group row justify-content-center">
@@ -51,4 +106,4 @@
     
 <div *ngFor='let error of errors'>
     <p><i class="fas fa-times"></i> {{error}}</p>
-</div>  
+</div>   -->
