--- a/src/app/components/welcome/welcome.component.html
+++ b/src/app/components/welcome/welcome.component.html
@@ -1,1 +1,6 @@
-<p>welcome works!</p>
+<router-outlet>
+    <app-feature></app-feature>
+    <app-trending></app-trending>
+    <app-findstore></app-findstore>
+    <app-employee-choice></app-employee-choice>
+</router-outlet>
