--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
     <div class="col-12">
       <div class="container">
         <router-outlet></router-outlet>
-        </div>
       </div>
     </div>
   </div>
+</div>
+<app-footer></app-footer>
