--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,16 +1,12 @@
 #footer {
-  background-color: #d8d8d8;
+  background-color: #000;
 }
 
-hr {
-  border-color: black solid 1px;
-  margin: 18px 0;
-  width: 100%;
+.row {
+  border-bottom: solid 1px #666;
 }
 
-.footer-contact::before {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-  border: 1px solid red !important;
+.row:last-child {
+  border-bottom: none;
 }
 /*# sourceMappingURL=footer.component.css.map */
