--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -1,3 +1,10 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap");
+h1 {
+  font-family: "Roboto Slab", serif;
+  font-size: 50px;
+  line-height: 1.3;
+}
+
 .asterisk-label:before {
   color: red;
   content: "*";
