--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:700&display=swap');
+$font-header:'Roboto Slab', serif;
+
+h1 {
+    font-family: $font-header;
+    font-size:50px;
+    line-height:1.3;
+}
+
 .asterisk-label:before{
     color: red;
     content: "*";
