--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -1,3 +1,5 @@
+$text-color: #CCC;
+
 #footer {
     background-color:#000;
 }
@@ -7,4 +9,16 @@
     &:last-child {
         border-bottom:none;
     }
+}
+
+.text-print {
+    color:$text-color;
+}
+
+ul {
+    list-style:none;
+}
+
+.list-header {
+    color:#a1c900;
 }
