--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -66,7 +66,7 @@
 </nav>
 
 <!-- Modal -->
-<div class="modal fade" id="modalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade hide" id="modalForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <!--Content-->
         <div class="modal-content">
@@ -103,7 +103,7 @@
                     </div>
                     <p *ngFor="let error of errors" class="text-danger"><i class="fas fa-times"></i> {{error}}</p>      
                     <div class="text-centermb-3 form-group">
-                        <button type="submit" class="btn btn-signin rounded-pill p-3 text-uppercase font-weight-bold btn-block" >Sign in</button>
+                        <button type="submit" class="btn btn-signin rounded-pill p-3 text-uppercase font-weight-bold btn-block"><i class="fas fa-power-off pr-1"></i>Sign in</button>
                     </div>
 
                     <div class="m-2 form-group">
