--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -50,66 +50,17 @@
                     <button type="submit" class="btn btn-info mt-3" [disabled]='formData.invalid'>Create Account</button>
                 </div>
             </div>
+            <div class="row">
+                <div class="col" *ngFor="let error of errors">
+                    <p class="text-center text-danger">* {{error}} *</p>
+                </div>
+            </div>
         </form>
     </div>
 </div>
 
-<div class="row mt-5">
+<div class="row m-5">
     <div class="col">
         <p class="text-center">How are we doing? <span><a href="/feedback">Give us feedback</a></span> on this page.</p>
     </div>
 </div>
-<hr class="my-5">
-
-<!-- <div class="row">
-    <div class="col-12">
-        <h2 class='text-center p-3'>Sign Up {{pattern}}</h2>
-        <form (ngSubmit)='register()' #formData='ngForm' class="needs-validation" novalidate>
-            <div class="form-group row justify-content-center">
-                <div  class="col-md-6 col-12">
-                    <input type="email" class="form-control"  placeholder="Email" [class.is-valid]="email.valid"
-                    required
-                    name='newUser.email' 
-                    pattern='^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$'
-                    [(ngModel)]='newUser.email' 
-                    #email="ngModel">
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
-                    <div class="text-danger" *ngIf='!email.valid && (email.touched || email.dirty)'> 
-                        <small class="asterisk-label" *ngIf="email.errors.required">Email is required.</small>
-                        <small class="asterisk-label" *ngIf="email.errors.pattern">Must be a valid email.</small>
-                    </div>
-                </div>
-            </div>
-            
-            <div  class="form-group row justify-content-center">
-                <div class="col-md-6 col-12">
-                    <input type="password" class="form-control" placeholder="Password" [class.is-valid]="password.valid"
-                    required
-                    name='newUser.password' 
-                    minlength="8"
-                    pattern='^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!%*#?&])[A-Za-z\d@$!%*#?&]{8,}$'
-                    [(ngModel)]='newUser.password' 
-                    #password="ngModel">
-                    <div class="valid-feedback">
-                        Perfect!
-                    </div>
-                    <div class="text-danger" *ngIf='!password.valid && (password.dirty || password.touched)'> 
-                        <small class="asterisk-label" *ngIf="password.errors.required">Password is required.</small>
-                        <small class="asterisk-label" *ngIf="password.errors.pattern">Must be at least 8 characters with one special character and number.</small>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 d-flex justify-content-center">
-                    <button type="submit" class='btn btn-danger mr-2' [disabled]='formData.invalid'>Create account</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-    
-<div *ngFor='let error of errors'>
-    <p><i class="fas fa-times"></i> {{error}}</p>
-</div>   -->
